# ac2-workshop-data-modeling

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json  onCreateCommand.sh
diagrams/: simple_schema.md
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: lab2.mdx  readme.mdx
docs/docs/images/lab1/: model.mermaid
docs/docs/lab1/: explore.mdx  load_data.mdx  modify.mdx  readme.mdx  setup.mdx  start.mdx
docs/docs/lab2/: explore.mdx  explore_data.mdx  explore_m2m_relationships.mdx  explore_schema.mdx  load_data.mdx  readme.mdx  setup.mdx  start.mdx  summary.mdx
docs/docs/lab3/: Interface_l2.mdx  initialschema.mdx  interface_role.mdx  interfacel2.mdx  interfacerole.mdx  load_schema.mdx  readme.mdx  setup.mdx  step1.mdx
tests/lab1/: conftest.py  test_graphql.py  test_rest.py
tools/: loader.py
workshop_b2/: models.py
workshop_b2/lab1/: main.py
workshop_b2/lab1/database/: models.py
workshop_b2/lab1/graphql/: models.py  schema.py
workshop_b2/lab1/rest/: router.py
workshop_b2/lab2/: docker-compose.yml  main.py
workshop_b2/lab2/database/: __init__.py  models.py
workshop_b2/lab2/graphql/: models.py  router.py  schema.py
workshop_b2/lab2/rest/: router.py
workshop_b2/lab3/data/: device.yml  interface.yml  interface_l2.yml  interface_l3.yml  ipaddress.yml  prefix.yml
workshop_b2/lab3/schemas/: dcim.yml  interface_l2.yml.bak  ipam.yml  location.yml
